// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer/components/primitives/Footer.tsx should render itself & its children - end 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="left-sidebar bg-gitify-footer"
      >
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="stretch"
          data-direction="horizontal"
          data-justify="end"
          data-padding="condensed"
          data-wrap="nowrap"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/primitives/Footer.tsx should render itself & its children - space-between 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="left-sidebar bg-gitify-footer"
      >
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="stretch"
          data-direction="horizontal"
          data-justify="space-between"
          data-padding="condensed"
          data-wrap="nowrap"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</div>
`;
